--- a/Chit_Zin_Win/Ex2_datatypes.ipynb
+++ b/Chit_Zin_Win/Ex2_datatypes.ipynb
@@ -21,13 +21,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 1,
       "metadata": {
-        "id": "7E6JVallDgU8",
-        "outputId": "879b49a5-8b87-4821-f522-95bd33d5be4e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7E6JVallDgU8",
+        "outputId": "56dab753-30ef-4772-d259-d2a452893a9e"
       },
       "outputs": [
         {
@@ -38,7 +38,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 1
         }
       ],
       "source": [
@@ -56,13 +56,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 2,
       "metadata": {
-        "id": "EmQMUPKlDgU_",
-        "outputId": "30420c6c-a6ac-48b6-9f46-8662ec872d14",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EmQMUPKlDgU_",
+        "outputId": "2e209c5b-9891-45a7-fd46-583109c9f475"
       },
       "outputs": [
         {
@@ -89,13 +89,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 3,
       "metadata": {
-        "id": "qNFLYPWMDgVC",
-        "outputId": "a87123af-8f96-4761-d289-3fcd44b97d5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qNFLYPWMDgVC",
+        "outputId": "db01557c-0364-45e6-de46-c4afa6ddac7b"
       },
       "outputs": [
         {
@@ -135,13 +135,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 4,
       "metadata": {
-        "id": "X1YJ4VTPDgVE",
-        "outputId": "e94c8ea7-c224-4b5f-fb27-a2f041f35b1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "X1YJ4VTPDgVE",
+        "outputId": "64ef47a0-ee26-40a7-ad71-722dce177d24"
       },
       "outputs": [
         {
@@ -170,20 +170,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 5,
       "metadata": {
-        "id": "zmTnCZhQDgVG",
-        "outputId": "fae6042c-4c6b-4b71-95e6-3c2c76c1534c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zmTnCZhQDgVG",
+        "outputId": "2bbb3d74-d423-4143-cd4d-f37706420a4d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The union combined set is {'age', 'status', 'Height', 'Education', 'Name'} and its length is 5.\n",
+            "The union combined set is {'Education', 'Name', 'Height', 'age', 'status'} and its length is 5.\n",
             "The intersection combined set is {'Name'} and its length is 1.\n"
           ]
         }
@@ -210,28 +210,24 @@
       "cell_type": "code",
       "source": [
         "user_input = input(\"Enter a string: \")\n",
-        "new_string = user_input.replace(user_input[1],\"*\") + \"!!!\"\n",
+        "new_string = user_input[0]+ \"*\" +user_input[2:] + \"!!!\"\n",
         "print(new_string)"
       ],
       "metadata": {
-        "id": "augIirpVa_2p",
-        "outputId": "b48d7f1e-3695-4f99-8612-36e76b4edbd9",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "augIirpVa_2p",
+        "outputId": "54539cf1-7bfb-467f-8d73-e631ee52b7fc"
       },
-      "execution_count": 32,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'str' object is not callable",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1446699914.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0muser_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter a string: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnew_string\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0muser_input\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_input\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"*\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"!!!\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_string\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: Banana is yellow.\n",
+            "B*nana is yellow.!!!\n"
           ]
         }
       ]
@@ -247,13 +243,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 7,
       "metadata": {
-        "id": "XfzfXi24DgVH",
-        "outputId": "4cf36968-9e48-425c-fe12-5ef240d88cce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XfzfXi24DgVH",
+        "outputId": "9a90c489-3533-43e0-ef42-5a374d77b750"
       },
       "outputs": [
         {
@@ -285,13 +281,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 8,
       "metadata": {
-        "id": "GfSZdLsDDgVI",
-        "outputId": "17a323fa-e7b3-4bb2-cde1-e02559ec572d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GfSZdLsDDgVI",
+        "outputId": "5e27fc87-136d-4f08-a593-9119c55f4811"
       },
       "outputs": [
         {
@@ -323,13 +319,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 9,
       "metadata": {
-        "id": "Wj5WwE2vDgVJ",
-        "outputId": "7ff7523c-c6d0-4c82-d14b-1fce2935500f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Wj5WwE2vDgVJ",
+        "outputId": "8478772e-9c47-4dd4-cc08-e9eab4d09375"
       },
       "outputs": [
         {
